--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Official Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="script" href="script.js" />
   </head>
   <body>
-    <h1>My Portfolio</h1>
+    <header class="header">
+      <a href="" class="logo">Abdelrhman</a>
+      <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Skills</a>
+        <a href="#">Projects</a>
+      </nav>
+    </header>
   </body>
 </html>
