--- a/index.html
+++ b/index.html
@@ -6,17 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Official Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="script" href="script.js" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
-      <a href="" class="logo">Abdelrhman</a>
+      <a href="" class="logo">Abdelrhman.</a>
       <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Skills</a>
-        <a href="#">Projects</a>
+        <a href="#Home" class="active">Home</a>
+        <a href="#About">About</a>
+        <a href="#Education">Education</a>
+        <a href="#Skills">Skills</a>
+        <a href="#Projects">Projects</a>
       </nav>
+
+      <div class="toggle">
+        <i class="bx bx-moon toggle-icon"></i>
+      </div>
     </header>
+
+    <section class="home">
+      <div class="home-content">
+        <h3>Hi, I am</h3>
+        <h1>Abdelrhman <span>Fadul</span></h1>
+        <h2>A Graduate Software Engineer!!</h2>
+        <p>
+          Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in
+          graphic or web designs.
+        </p>
+
+        <div class="social-media">
+          <a href="#"><i class='bx bxl-facebook' ></i></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+        </div>
+
+        <a href="#" class="btn">Download CV</a>
+      </div>
+      <div class="profession-container">
+        <div class="overlay">
+
+        </div>
+      </div>
+      <div class="home-img">
+          <img src="images/Grad2.jpg" alt="" >
+        </div>
+    </section>
+
+    <script src="script.js"></script>
   </body>
 </html>
