--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
     />
   </head>
   <body>
+    <!-- HEADER -->
     <header class="header">
-      <a href="" class="logo">Abdelrhman.</a>
+      <a href="" class="logo">A. FADUL</a>
       <nav class="navbar">
-        <a href="#Home" class="active">Home</a>
-        <a href="#About">About</a>
-        <a href="#Education">Education</a>
-        <a href="#Skills">Skills</a>
-        <a href="#Projects">Projects</a>
+        <a href="#home" style="--i:12;"class="active">Home</a>
+        <a href="#about" style="--i:13;">About</a>
+        <a href="#education" style="--i:14;">Education</a>
+        <a href="#skills" style="--i:15;">Skills</a>
+        <a href="#projects" style="--i:16;">Projects</a>
       </nav>
 
       <div class="toggle">
         <i class="bx bx-moon toggle-icon"></i>
       </div>
     </header>
-
+    <!-- HOME SECTION -->
     <section class="home">
       <div class="home-content">
         <h3>Hi, I am</h3>
@@ -54,6 +55,44 @@
       <div class="home-img">
           <img src="images/Grad2.jpg" alt="" >
         </div>
+    </section>
+    <!-- ABOUT SECTION -->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="images/Grad2.jpg" alt="">
+      </div>
+
+      <div class="about-content">
+        <h2 class="heading">About <span>Me!!</span></h2>
+        <h3>Hi, I am Open to work, can you hire me!!</h3>
+        <p>
+          Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in
+          graphic or web designs.
+        </p>
+        <a href="#" class="btn">Read More</a>
+
+      </div>
+    </section>
+    <!-- EDUCATION SECTION -->
+    <section class="education" id="education">
+      <h2 class="heading">My <span>Education</span></h2>
+      <div class="education-container">
+        <div class="education-box">
+          <h3>Master of Engineering, Software Engineering</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur</p>>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+        <div class="education-box">
+          <h3>Level_3 Access to Higher Education, Computing</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur</p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+        <div class="education-box">
+          <h3>Three Years IT Deploma, Sudan</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur</p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+      </div>
     </section>
 
     <script src="script.js"></script>
