--- a/index.html
+++ b/index.html
@@ -94,6 +94,159 @@
         </div>
       </div>
     </section>
+    <!-- SKILLS SECTION -->
+    <section class="skills" id="skills">
+      <div class="main-text">
+        <h2 class="heading">My<span>Skills!!</span></h2>
+      </div>
+
+      <div class="skill-main">
+        <div class="skill-left">
+          <h3>Technical Skills</h3>
+          <div class="skill-bar">
+            <div class="info">
+              <p>HTML</p>
+              <p>70%</p>
+            </div>
+            <div class="bar">
+              <span class="html"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>CSS</p>
+              <p>65%</p>
+            </div>
+            <div class="bar">
+              <span class="css"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>JAVASCRIPT</p>
+              <p>75%</p>
+            </div>
+            <div class="bar">
+              <span class="javascript"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>REACT</p>
+              <p>60%</p>
+            </div>
+            <div class="bar">
+              <span class="react"></span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="skill-left">
+          <h3>Technical Skills</h3>
+          <div class="skill-bar">
+            <div class="info">
+              <p>HTML</p>
+              <p>70%</p>
+            </div>
+            <div class="bar">
+              <span class="html"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>CSS</p>
+              <p>65%</p>
+            </div>
+            <div class="bar">
+              <span class="css"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>JAVASCRIPT</p>
+              <p>75%</p>
+            </div>
+            <div class="bar">
+              <span class="javascript"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>REACT</p>
+              <p>60%</p>
+            </div>
+            <div class="bar">
+              <span class="react"></span>
+            </div>
+          </div>
+
+        </div>
+        <!-- Skill right -->
+        <!-- <div class="skill-right">
+          <h3>Professional Skills</h3>
+          <div class="professional">
+            <div class="box">
+              <div class="circle">
+                <div class="points" style="--i:1"></div>
+                <div class="points" style="--i:2"></div>
+                <div class="points" style="--i:3"></div>
+              </div>
+              <div class="text">
+                <big>90%</big>
+                <small>Team Work</small>
+              </div>
+            </div>
+
+            <div class="box">
+              <div class="circle">
+                <div class="points" style="--i:1"></div>
+                <div class="points" style="--i:2"></div>
+                <div class="points" style="--i:3"></div>
+              </div>
+              <div class="text">
+                <big>90%</big>
+                <small>Team Work</small>
+              </div>
+            </div>
+
+            <div class="box">
+              <div class="circle">
+                <div class="points" style="--i:1"></div>
+                <div class="points" style="--i:2"></div>
+                <div class="points" style="--i:3"></div>
+              </div>
+              <div class="text">
+                <big>90%</big>
+                <small>Team Work</small>
+              </div>
+            </div>
+
+            <div class="box">
+              <div class="circle">
+                <div class="points" style="--i:1"></div>
+                <div class="points" style="--i:2"></div>
+                <div class="points" style="--i:3"></div>
+              </div>
+              <div class="text">
+                <big>90%</big>
+                <small>Team Work</small>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+      </div>
+      
+
+    </section>
+
 
     <script src="script.js"></script>
   </body>
