Added Projects section

--- a/index.html
+++ b/index.html
@@ -241,12 +241,17 @@
             </div>
           </div>
         </div> -->
+      </div>
+    </section>
+    <section class="projects" id="projects">
+      <h2 class="heading">My Latest <span>Projects</span></h2>
+      <div class="projects-container">
+        <div class="projects-box">
+          <img src="images/project1.jpg" alt="">
+        </div>
 
       </div>
-      
-
     </section>
-
 
     <script src="script.js"></script>
   </body>
