--- a/index.html
+++ b/index.html
@@ -243,11 +243,75 @@
         </div> -->
       </div>
     </section>
+
+    <!-- SECTION PROJECTS -->
     <section class="projects" id="projects">
-      <h2 class="heading">My Latest <span>Projects</span></h2>
+      <h2 class="heading">Latest <span>Projects</span></h2>
       <div class="projects-container">
         <div class="projects-box">
-          <img src="images/project1.jpg" alt="">
+          <img src="images/project2.jpg" alt="">
+
+          <div class="projects-layer">
+            <h4>MERN STACK</h4>
+            <P>Lorem ipsum dolor sit amet, consectetur. 
+            </P>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="projects-box">
+          <img src="images/project3.jpg" alt="">
+
+          <div class="projects-layer">
+            <h4>MERN STACK</h4>
+            <P>Lorem ipsum dolor sit amet, consectetur. 
+            </P>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="projects-box">
+          <img src="images/project14.jpg" alt="">
+
+          <div class="projects-layer">
+            <h4>MERN STACK</h4>
+            <P>Lorem ipsum dolor sit amet, consectetur. 
+            </P>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="projects-box">
+          <img src="images/project5.jpg" alt="">
+
+          <div class="projects-layer">
+            <h4>MERN STACK</h4>
+            <P>Lorem ipsum dolor sit amet, consectetur. 
+            </P>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="projects-box">
+          <img src="images/project6.jpg" alt="">
+
+          <div class="projects-layer">
+            <h4>MERN STACK</h4>
+            <P>Lorem ipsum dolor sit amet, consectetur. 
+            </P>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="projects-box">
+          <img src="images/project7.jpg" alt="">
+
+          <div class="projects-layer">
+            <h4>MERN STACK</h4>
+            <P>Lorem ipsum dolor sit amet, consectetur. 
+            </P>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
         </div>
 
       </div>
