--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     <!-- HEADER -->
     <header class="header">
       <a href="" class="logo">A. FADUL</a>
+      
       <nav class="navbar">
         <a href="#home" style="--i:12;"class="active">Home</a>
         <a href="#about" style="--i:13;">About</a>
         <a href="#education" style="--i:14;">Education</a>
         <a href="#skills" style="--i:15;">Skills</a>
         <a href="#projects" style="--i:16;">Projects</a>
+        <a href="#contact" style="--i:17;">Contact</a>
       </nav>
 
       <div class="toggle">
-        <i class="bx bx-moon toggle-icon"></i>
+        <i class="bx bx-moon toggle-icon" id="darkMode-icon"></i>
+
+        <i class='bx bx-menu' id="menu-icon"></i>
       </div>
     </header>
     <!-- HOME SECTION -->
@@ -43,6 +47,7 @@
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
           <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class='bx bxl-github'></i></i></a>
         </div>
 
         <a href="#" class="btn">Download CV</a>
@@ -188,59 +193,6 @@
           </div>
 
         </div>
-        <!-- Skill right -->
-        <!-- <div class="skill-right">
-          <h3>Professional Skills</h3>
-          <div class="professional">
-            <div class="box">
-              <div class="circle">
-                <div class="points" style="--i:1"></div>
-                <div class="points" style="--i:2"></div>
-                <div class="points" style="--i:3"></div>
-              </div>
-              <div class="text">
-                <big>90%</big>
-                <small>Team Work</small>
-              </div>
-            </div>
-
-            <div class="box">
-              <div class="circle">
-                <div class="points" style="--i:1"></div>
-                <div class="points" style="--i:2"></div>
-                <div class="points" style="--i:3"></div>
-              </div>
-              <div class="text">
-                <big>90%</big>
-                <small>Team Work</small>
-              </div>
-            </div>
-
-            <div class="box">
-              <div class="circle">
-                <div class="points" style="--i:1"></div>
-                <div class="points" style="--i:2"></div>
-                <div class="points" style="--i:3"></div>
-              </div>
-              <div class="text">
-                <big>90%</big>
-                <small>Team Work</small>
-              </div>
-            </div>
-
-            <div class="box">
-              <div class="circle">
-                <div class="points" style="--i:1"></div>
-                <div class="points" style="--i:2"></div>
-                <div class="points" style="--i:3"></div>
-              </div>
-              <div class="text">
-                <big>90%</big>
-                <small>Team Work</small>
-              </div>
-            </div>
-          </div>
-        </div> -->
       </div>
     </section>
 
@@ -317,6 +269,50 @@
       </div>
     </section>
 
+    <!-- SECTION Contact Me -->
+    <section class="contact" id="contact">
+      <div class="heading">
+        <h2>Contact <span>Me</span></h2>
+      </div>
+      <form action="#">
+        <div class="input-box">
+          <input class="item" type="text" placeholder="Full Name" id="name" autocomplete="off">
+          <input class="item" type="email" placeholder="Email" id="email" autocomplete="off"> 
+      </div>
+      <div class="input-box">
+          <input class="item" type="number" placeholder="Mobile Number" id="number" autocomplete="off">
+          <input class="item" type="text" placeholder="Subject" id="subject" autocomplete="off">
+      </div>
+
+        <textarea class="item" name="" id="message" cols="30" rows="10" placeholder="Your Message Here!" autocomplete="off"></textarea>
+
+        <input type="submit" value="Send Message" class="btn">
+      </form>
+    </section>
+
+     <!-- SECTION FOOTER -->
+    <section class="footer">
+      <div class="social">
+          <a href="#"><i class='bx bxl-facebook' ></i></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class='bx bxl-github'></i></i></a>
+      </div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <p class="copyright"> @ Fadul | All right reserved</p>
+        
+      </div>
+    </section>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
   </body>
 </html>
