--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           <a href="#"><i class='bx bxl-facebook' ></i></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"><i class='bx bxl-github'></i></i></a>
+          <a href="https://www.linkedin.com/feed/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/Fadul1973"><i class='bx bxl-github'></i></i></a>
         </div>
 
-        <a href="#" class="btn">Download CV</a>
+        <a href="./CVFile/CV.pdf" class="btn" download>Download CV</a>
       </div>
       <div class="profession-container">
         <div class="overlay">
