--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <section class="home">
       <div class="home-content">
         <h3>Hi, I am</h3>
-        <h1>Abdelrhman <span>Fadul</span></h1>
-        <h2>A Graduate Software Engineer!!</h2>
+        <h1> Abdelrhman <span>Fadul</span></h1>
+        <h2>
+           <span class="accupation"></span>
+        </h2>
         <p>
           Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in
           graphic or web designs.
@@ -71,7 +73,7 @@
         <h2 class="heading">About <span>Me!!</span></h2>
         <h3>Hi, I am Open to work, can you hire me!!</h3>
         <p>
-          Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in
+          Lorem ipsum, or lipsum as it is sometimes known, gfyguifa gifasuyasjhvguf ggfejfagjjc gigjafjd is dummy text used in
           graphic or web designs.
         </p>
         <a href="#" class="btn">Read More</a>
@@ -296,8 +298,8 @@
           <a href="#"><i class='bx bxl-facebook' ></i></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"><i class='bx bxl-github'></i></i></a>
+          <a href="https://www.linkedin.com/feed/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/Fadul1973"><i class='bx bxl-github'></i></i></a>
       </div>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -307,12 +309,17 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <p class="copyright"> @ Fadul | All right reserved</p>
-        
+      <p class="copyright"> @ Fadul | All right reserved</p> 
+      </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
       </div>
     </section>
+
+    
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
