index.html modification

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="#"><i class='bx bxl-facebook' ></i></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="https://www.linkedin.com/feed/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://linkedin.com/in/abdelrhman-fadul-2b5b101b1"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/Fadul1973"><i class='bx bxl-github'></i></i></a>
         </div>
 
@@ -300,7 +300,7 @@
           <a href="#"><i class='bx bxl-facebook' ></i></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="https://www.linkedin.com/feed/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://linkedin.com/in/abdelrhman-fadul-2b5b101b1"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/Fadul1973"><i class='bx bxl-github'></i></i></a>
       </div>
       <ul>
