Added some text

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
            <span class="accupation"></span>
         </h2>
         <p>
-        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in
-        graphic or web designs.
+        This is my official portfolio website to showcase my details, education, skills, and the latest projects that I have developed and others that I am still working on them! <br>
         </p>
 
         <div class="social-media">
@@ -73,10 +72,9 @@
 
       <div class="about-content">
         <h2 class="heading">About <span>Me!!</span></h2>
-        <h3>Hi, I am Open to work, can you hire me!!</h3>
         <p>
-          Lorem ipsum, or lipsum as it is sometimes known, gfyguifa gifasuyasjhvguf ggfejfagjjc gigjafjd is dummy text used in
-          graphic or web designs.
+          Hi,<br><br>
+          I am Abdelrhman Fadul, apationate Graduate Software Engineer, with technical and professional skills.<br><br> Willing to participate in all software development lifecycle and eager to work on cutting edge technologies and products that make real difference to the world.
         </p>
         <a href="#" class="btn">Read More</a>
 
@@ -88,17 +86,18 @@
       <div class="education-container">
         <div class="education-box">
           <h3>Master of Engineering, Software Engineering</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur</p>>
+          <p>This is an integrated Master's degree
+             took place between 2019-2023, Sheffield Hallam University.</p>
             <a href="#" class="btn">Learn More</a>
         </div>
         <div class="education-box">
           <h3>Level_3 Access to Higher Education, Computing</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur</p>
+          <p>This is a level3 Diploma in computing took place between 2018-2019 at Sheffield College.</p>
             <a href="#" class="btn">Learn More</a>
         </div>
         <div class="education-box">
           <h3>Three Years of IT Deploma, Sudan</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur</p>
+          <p>This is an IT Diploma took place between 1997-2000 at University of Science and Technology, Sudan.</p>
             <a href="#" class="btn">Learn More</a>
         </div>
       </div>
@@ -152,14 +151,34 @@
             </div>
           </div>
 
+          <div class="skill-bar">
+            <div class="info">
+              <p>Java</p>
+              <p>60%</p>
+            </div>
+            <div class="bar">
+              <span class="react"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>C++</p>
+              <p>65%</p>
+            </div>
+            <div class="bar">
+              <span class="react"></span>
+            </div>
+          </div>
+
         </div>
 
         <div class="skill-left">
-          <h3>Technical Skills</h3>
+          <h3>professional Skills</h3>
           <div class="skill-bar">
             <div class="info">
-              <p>HTML</p>
-              <p>70%</p>
+              <p>Communication</p>
+              <p>80%</p>
             </div>
             <div class="bar">
               <span class="html"></span>
@@ -168,8 +187,8 @@
 
           <div class="skill-bar">
             <div class="info">
-              <p>CSS</p>
-              <p>65%</p>
+              <p>Team Work</p>
+              <p>75%</p>
             </div>
             <div class="bar">
               <span class="css"></span>
@@ -178,8 +197,8 @@
 
           <div class="skill-bar">
             <div class="info">
-              <p>JAVASCRIPT</p>
-              <p>75%</p>
+              <p>Eager to learn</p>
+              <p>80%</p>
             </div>
             <div class="bar">
               <span class="javascript"></span>
@@ -188,8 +207,28 @@
 
           <div class="skill-bar">
             <div class="info">
-              <p>REACT</p>
-              <p>60%</p>
+              <p>Approachable</p>
+              <p>90%</p>
+            </div>
+            <div class="bar">
+              <span class="react"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>Taking Inititives</p>
+              <p>75%</p>
+            </div>
+            <div class="bar">
+              <span class="react"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>Organisational Skills</p>
+              <p>90%</p>
             </div>
             <div class="bar">
               <span class="react"></span>
